--- a/.github/workflows/first-example.yaml
+++ b/.github/workflows/first-example.yaml
@@ -1,9 +1,14 @@
 name:  My First Workflow
+
 on: push
+
 jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+        - name: Checkout Repo
+          uses: actions/checkout@v4
+          
         - name: Welcome message
           run: echo "My first GitHub Action Job"
 
