--- a/.github/workflows/first-example.yaml
+++ b/.github/workflows/first-example.yaml
@@ -8,12 +8,12 @@ jobs:
         steps:
         - name: Checkout Repo
           uses: actions/checkout@v4
-          
+
         - name: Welcome message
-          run: echo "My first GitHub Action Job"
+          run: | 
+            echo "My first GitHub Action Job"
+            ls -latr
+            cat README.md
 
-        - name: List files
-          run: ls
-
-        - name: read file
-          run: cat README.md
+        - name: generate ASCII Artwork
+          run: cowsay -f dragon "Run for cover, I am a DRAGON...RAWR" >> dragon.txt
