--- a/.github/workflows/generate-ascci.yaml
+++ b/.github/workflows/generate-ascci.yaml
@@ -14,7 +14,7 @@ jobs:
       run: cowsay -f dragon "Run for cover, I am a DRAGON...RAWR" >> dragon.txt
 
     - name: Sleep for 30 seconds
-      run: slepp 30
+      run: sleep 30
   
   test_job_2:
     needs: build_job_1
