--- a/.github/workflows/variable-secrets.yaml
+++ b/.github/workflows/variable-secrets.yaml
@@ -96,7 +96,6 @@ on:
 
 env: 
   CONTAINER_REGISTRY: docker.io
-  DOCKER_USERNAME: siddharth1
   IMAGE_NAME: github-actions-nginx
 
 jobs:
@@ -107,9 +106,7 @@ jobs:
       run: docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
 
     - name: Docker Login
-      env: 
-        DOCKER_PASSWORD: s3curePaSsw0rd
-      run: docker login --usename=$DOCKER_USERNAME --pasword=$DOCKER_PASSWORD
+      run: docker login --usename=$DOCKER_USERNAME --pasword=${{ secrets.DOCKER_PASSWORD }}
 
     - name: Docker Publish
       run: docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
