--- a/.github/workflows/variable-secrets.yaml
+++ b/.github/workflows/variable-secrets.yaml
@@ -32,22 +32,22 @@ on:
 #     - name: Docker Build
 #       env: 
 #         CONTAINER_REGISTRY: docker.io
-#         DOCKER_USERNAME: reivson
+#         {{ vars.DOCKER_USERNAME }}: reivson
 #         IMAGE_NAME: github-actions-nginx
-#       run: docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+#       run: docker build -t $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
 #     - name: Docker Login
 #       env:
-#         DOCKER_USERNAME: reivson
+#         {{ vars.DOCKER_USERNAME }}: reivson
 #         DOCKER_PASSWORD: s3curePaSsw0rd
-#       run: docker login --usename=$DOCKER_USERNAME --pasword=$DOCKER_PASSWORD
+#       run: docker login --usename=${{ vars.DOCKER_USERNAME }} --pasword=$DOCKER_PASSWORD
 
 #     - name: Docker Publish
 #       env: 
 #         CONTAINER_REGISTRY: docker.io
-#         DOCKER_USERNAME: reivson
+#         {{ vars.DOCKER_USERNAME }}: reivson
 #         IMAGE_NAME: github-actions-nginx
-#       run: docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+#       run: docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
 #   deploy:
 #     needs: docker
@@ -56,9 +56,9 @@ on:
 #     - name: Docker run
 #       env: 
 #         CONTAINER_REGISTRY: docker.io
-#         DOCKER_USERNAME: reivson
+#         {{ vars.DOCKER_USERNAME }}: reivson
 #         IMAGE_NAME: github-actions-nginx
-#       run: docker run -d -p 8080:80 $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+#       run: docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
 ######################## environment variables at JOB level ####################################
 
@@ -66,31 +66,31 @@ on:
 #   docker:
 #     env: 
 #       CONTAINER_REGISTRY: docker.io
-#       DOCKER_USERNAME: reivson
+#       {{ vars.DOCKER_USERNAME }}: reivson
 #       IMAGE_NAME: github-actions-nginx
 #     runs-on: ubuntu-latest
 #     steps:
 #     - name: Docker Build 
-#       run: docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+#       run: docker build -t $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
 #     - name: Docker Login
 #       env: 
 #         DOCKER_PASSWORD: s3curePaSsw0rd
-#       run: docker login --usename=$DOCKER_USERNAME --pasword=$DOCKER_PASSWORD
+#       run: docker login --usename=${{ vars.DOCKER_USERNAME }} --pasword=$DOCKER_PASSWORD
 
 #     - name: Docker Publish
-#       run: docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+#       run: docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
 #   deploy:
 #     env: 
 #       CONTAINER_REGISTRY: docker.io
-#       DOCKER_USERNAME: reivson
+#       {{ vars.DOCKER_USERNAME }}: reivson
 #       IMAGE_NAME: github-actions-nginx
 #     needs: docker
 #     runs-on: ubuntu-latest
 #     steps:
 #     - name: Docker run
-#       run: docker run -d -p 8080:80 $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+#       run: docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
 ######################## environment variables at WORKFLOW level ####################################
 
@@ -103,17 +103,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Docker Build 
-      run: docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
+      run: docker build -t ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
     - name: Docker Login
-      run: docker login --usename=$DOCKER_USERNAME --pasword=${{ secrets.DOCKER_PASSWORD }}
+      run: docker login --usename=${{ vars.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
 
     - name: Docker Publish
-      run: docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+      run: docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
   deploy:
     needs: docker
     runs-on: ubuntu-latest
     steps:
     - name: Docker run
-      run: docker run -d -p 8080:80 $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+      run: docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
