--- a/.github/workflows/variable-secrets.yaml
+++ b/.github/workflows/variable-secrets.yaml
@@ -103,10 +103,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Docker Build 
-      run: docker build -t ${{ env.CONTAINER_REGISTRY }}/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
+      run: docker build -t $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
     - name: Docker Login
-      run: docker login --usename=${{ vars.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+      run: docker login --username=${{ vars.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
 
     - name: Docker Publish
       run: docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
