--- a/.github/workflows/variable-secrets.yaml
+++ b/.github/workflows/variable-secrets.yaml
@@ -1,7 +1,8 @@
 name: Exploring Variables and Secrets
 
-on: 
-  push
+on:
+  workflow_dispatch: 
+  #push
 
 # jobs:
 #   docker:
@@ -112,8 +113,13 @@ jobs:
       run: docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
   deploy:
+    if: github.ref == 'refs/heads/main'
     needs: docker
+    concurrency:
+      group: production-deployment
+      cancel-in-progress: true
     runs-on: ubuntu-latest
     steps:
     - name: Docker run
+      timeout-minutes: 1
       run: docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
